operator/pkg/gateway-api/testdata/gateway/httproute-service-types/output/httproute-service-types.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service-types
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches: [{ path: { type: Exact, value: /manual-endpointslices } }]
      backendRefs: [{ name: manual-endpointslices, port: 8080 }]
    - matches: [{ path: { type: Exact, value: /headless } }]
      backendRefs: [{ name: headless, port: 8080 }]
    - matches:
        [{ path: { type: Exact, value: /headless-manual-endpointslices } }]
      backendRefs: [{ name: headless-manual-endpointslices, port: 8080 }]
status:
  parents:
    - conditions:
        - lastTransitionTime: "2025-07-01T14:19:44Z"
          message: Accepted HTTPRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T14:19:44Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: same-namespace
